# ovos_config_rust

./: Cargo.toml  README.md
src/: config.rs  lib.rs  locations.rs  log.rs  xdg.rs
