[package]
name = "ovos_config"
version = "0.1.0"
edition = "2021"
description = "Configuration management for OVOS"
license = "Apache-2.0"
repository = "https://github.com/mikejgray/ovos_config_rust"
readme = "README.md"
authors = ["Mike Gray <mike@graywind.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
serde_yaml = "0.9"
parking_lot = "0.12"
regex = "1.5"
log = "0.4.22"
env_logger = "0.9"
